botao q muda as cores

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 </head>
 <body>
     <main>
-        <!-- <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron">
+        <section class="robotron">
+            <img id = "robo" class="robo" src="img/robotron.png" alt="Robotron">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
-        </section> -->
+        </section>
+
+        <div class="controle">
+            <buttom onclick="esquerda();" class="controle-ajuste">&lt;</buttom>
+            <buttom onclick="direita();" class="controle-ajuste">&gt;</buttom>
+        </div>
 
         <section class="box estatisticas">
             <div class="estatistica">
@@ -43,7 +48,7 @@
                 <div class="estatistica-valor">
                     <p class="estatistica-numero">597</p>
                 </div>
-            </div>
+            </div> 
         </section>
 
         <section class="equipamentos">
